k8s/app-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: python-flask
  namespace: kingflare-dev
spec:  
  to:
    kind: Service
    name: app
    weight: 100
  port:
    targetPort: '5000'
  wildcardPolicy: None
